--- a/cron.yml
+++ b/cron.yml
@@ -11,3 +11,12 @@
         user: root
         job: "df -h>> /var/log/my_script.log 2>&1"
         state: present
+
+    - name: Ensure cron job is present
+      cron:
+        name: "Cron Job"
+        minute: "*"
+        hour: "*/2"
+        user: root
+        job: "df -h>> /var/log/my_script.log 2>&1"
+        state: absent
