--- a/cron.yml
+++ b/cron.yml
@@ -10,7 +10,7 @@
         hour: "*"
         user: root
         job: "df -h>> /var/log/my_script.log 2>&1"
-        state: absent
+        state: present
 
     - name: Ensure cron job is present
       cron:
