--- a/cron.yml
+++ b/cron.yml
@@ -4,7 +4,7 @@
   become: yes
   gather_facts: false
   tasks:
-    - name: Ensure cron job is present
+    - name: Ensure cron job 1 is present
       cron:
         name: "My Cron Job"
         minute: "*"
@@ -13,7 +13,7 @@
         job: "df -h>> /var/log/my_script.log 2>&1"
         state: present
 
-    - name: Ensure cron job is present
+    - name: Ensure cron job 2 is present
       cron:
         name: "Cron Job"
         minute: "*"
